[gd_scene load_steps=7 format=3 uid="uid://d0sa3j5cpdf81"]

[ext_resource type="Script" path="res://code/grass.gd" id="1_2fdh7"]
[ext_resource type="Texture2D" uid="uid://ctd5suj703se7" path="res://art/grass.png" id="1_yjl8s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s64ov"]
radius = 65.0077

[sub_resource type="CircleShape2D" id="CircleShape2D_dptgi"]
radius = 70.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8vv3x"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_il51j"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 84.53
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 84.21
initial_velocity_max = 168.42
angular_velocity_min = -197.05
angular_velocity_max = 197.05
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -31.58
linear_accel_max = 29.47
tangential_accel_min = -28.42
tangential_accel_max = 17.89
damping_max = 100.0
angle_min = -720.0
angle_max = 1283.0

[node name="Grass" type="StaticBody2D"]
scale = Vector2(0.1, 0.1)
input_pickable = true
script = ExtResource("1_2fdh7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yjl8s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s64ov")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dptgi")

[node name="CutParticles" type="GPUParticles2D" parent="."]
modulate = Color(0, 0.580392, 0.290196, 1)
material = SubResource("CanvasItemMaterial_8vv3x")
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_il51j")
lifetime = 1.35
one_shot = true
preprocess = 163.64
explosiveness = 0.34
randomness = 1.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
